Implement /dfsps/{dfspId}/onboard API.
